--- a/index.html
+++ b/index.html
@@ -13,7 +13,24 @@
 <body>
   <!-- header -->
   <header>
-
+    <!-- navbar fissa in alto -->
+    <div class="navbar">
+      <nav class="navbar-items navbar-light bg-light">
+        <!-- navbar sx con logo -->
+        <a class="navbar-brand" href="#">
+          <img src="dist/img/avadabarbers-stickylogo-x1.png" width="170" height="60" alt="logo">
+        </a>
+        <!-- navbar dx con icone -->
+        <div class="navbar-icons">
+          <a class="cart" href="#">
+            <i class="fas fa-shopping-cart"></i>
+          </a>
+          <a class="bars" href="#">
+            <i class="fas fa-bars"></i>
+          </a>
+        </div>
+      </nav>
+    </div>
   </header>
   <main>
 
