inizio main, jumbo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@600&display=swap" rel="stylesheet">
     <title>Barber Shop</title>
 </head>
-<body>
+<body style="width: 100vw;height: 100vh;">
   <!-- header -->
   <header>
     <!-- navbar fissa in alto -->
