--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <hr class="my-4">
           <p>The Pinnacle of Male Grooming</p>
           <p class="lead">
-            <a class="btn btn-primary btn-lg upper" href="#" role="button">learn more</a>
+            <a class="btn btn-outline-warning btn-lg upper " href="#" role="button">learn more</a>
           </p>
         </div>
         <!-- img barbiere -->
@@ -54,6 +54,21 @@
           <img src="dist/img/avadabarbers_hero_focalmirror-600x825.png" alt="barber">
         </div>
       </div>
+    </div>
+    <!-- sezione award winning -->
+    <div class="container-fluid award"
+         style="background-image: url('dist/img/avadabarbers-about-introbackground.jpg')">
+      <div class="container-award">
+        <h3 class="upper">award winning</h3>
+        <h1>Pro Barbers</h1>
+        <p class="lead">
+          <a class="btn btn-outline-warning btn-lg upper " href="#" role="button">meet your new barber</a>
+        </p>
+      </div>
+    </div>
+    <!-- sezione servizi divisa in 3 colonne -->
+    <div class="container-fluid services">
+      
     </div>
 
   </main>
