flex sezione services e 3 cards

--- a/index.html
+++ b/index.html
@@ -68,7 +68,34 @@
     </div>
     <!-- sezione servizi divisa in 3 colonne -->
     <div class="container-fluid services">
-      
+      <div class="container services">
+        <div class="services-title">
+          <h3>mens grooming</h3>
+          <h1>Services</h1>
+        </div>
+        <!-- 3 colonne con 3 cards -->
+        <div class="services-cards">
+          <div class="card">
+            <img src="" alt="">
+            <h4></h4>
+            <p></p>
+          </div>
+          <div class="card">
+            <img src="" alt="">
+            <h4></h4>
+            <p></p>
+          </div>
+          <div class="card">
+            <img src="" alt="">
+            <h4></h4>
+            <p></p>
+          </div>
+        </div>
+        <!-- button -->
+        <p class="lead">
+          <a class="btn btn-outline-warning btn-lg upper " href="#" role="button">read about our services</a>
+        </p>
+      </div>
     </div>
 
   </main>
