--- a/index.html
+++ b/index.html
@@ -75,20 +75,34 @@
         </div>
         <!-- 3 colonne con 3 cards -->
         <div class="services-cards">
+          <!-- trim & cut -->
           <div class="card">
-            <img src="" alt="">
-            <h4></h4>
-            <p></p>
+            <img src="" alt="trim">
+            <h4>Trim & Cut</h4>
+            <p>Avada Barbers are experts in the
+               lickety split trim and hair cut. Quick
+               but careful and ridiculously good
+               looking.
+            </p>
           </div>
+          <!-- wash & dry -->
           <div class="card">
-            <img src="" alt="">
-            <h4></h4>
-            <p></p>
+            <img src="" alt="shampoo">
+            <h4>Wash & Dry</h4>
+            <p>Take a seat in our fine leather chairs,
+              lean back and let us lather you a fresh
+              head in a luxurious fashion.
+            </p>
           </div>
+          <!-- beard Tidy -->
           <div class="card">
-            <img src="" alt="">
-            <h4></h4>
-            <p></p>
+            <img src="" alt="tidy">
+            <h4>Beard Tidy</h4>
+            <p>Tame the tangles and untidy facial
+              hairs like a gentleman with our
+              Beard Tidy services from Avada
+              Barbers.
+            </p>
           </div>
         </div>
         <!-- button -->
