--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <img src="dist/img/avadabarbers-stickylogo-x1.png" width="170" height="60" alt="logo">
           </a>
         </div>
+<!-- /////////////////////////////////////////////////////////////////////////////////////////////////////// -->
+        <!-- UTILIZZARE VUE JS PER HAMBURGER MENU         -->
         <!-- navbar dx con icone -->
         <div class="navbar-icons">
           <a class="cart" href="#">
@@ -70,37 +72,45 @@
     <div class="container-fluid services">
       <div class="container services">
         <div class="services-title">
-          <h3>mens grooming</h3>
+          <h3 class="upper">mens grooming</h3>
           <h1>Services</h1>
         </div>
         <!-- 3 colonne con 3 cards -->
         <div class="services-cards">
           <!-- trim & cut -->
           <div class="card">
-            <img src="" alt="trim">
+            <img src="dist/img/avadabarbers-trimcut-icon-before.png" alt="trim">
             <h4>Trim & Cut</h4>
             <p>Avada Barbers are experts in the
+              <br>
                lickety split trim and hair cut. Quick
+              <br>
                but careful and ridiculously good
+              <br>
                looking.
             </p>
           </div>
           <!-- wash & dry -->
           <div class="card">
-            <img src="" alt="shampoo">
+            <img src="dist/img/avadabarbers-washndry-icon.png" alt="shampoo">
             <h4>Wash & Dry</h4>
             <p>Take a seat in our fine leather chairs,
+              <br>
               lean back and let us lather you a fresh
+              <br>
               head in a luxurious fashion.
             </p>
           </div>
           <!-- beard Tidy -->
           <div class="card">
-            <img src="" alt="tidy">
+            <img src="dist/img/avadabarbers-beardtrim-icon.png" alt="tidy">
             <h4>Beard Tidy</h4>
             <p>Tame the tangles and untidy facial
+              <br>
               hairs like a gentleman with our
+              <br>
               Beard Tidy services from Avada
+              <br>
               Barbers.
             </p>
           </div>
