sezione products, img

--- a/index.html
+++ b/index.html
@@ -121,6 +121,46 @@
         </p>
       </div>
     </div>
+    <!-- sezione Products -->
+    <div class="container-fluid products">
+      <div class="container products">
+        <div class="products-title">
+          <h3 class="upper">we have you covered</h3>
+          <h1>Avada Grooming Products</h1>
+        </div>
+        <!-- 4 colonne con 4 cards -->
+        <div class="services-cards">
+          <!-- brush -->
+          <div class="card">
+            <img src="" alt="brush">
+            <h4>Brush</h4>
+            <p>$15.00</p>
+          </div>
+          <!-- scissors -->
+          <div class="card">
+            <img src="" alt="scissors">
+            <h4>Scissors</h4>
+            <p>$85.00</p>
+          </div>
+          <!-- hot oil -->
+          <div class="card">
+            <img src="" alt="oil">
+            <h4>Hot Oil</h4>
+            <p>$15.00</p>
+          </div>
+          <!-- razor -->
+          <div class="card">
+            <img src="" alt="razor">
+            <h4>Straight Razor</h4>
+            <p>$30.00</p>
+          </div>
+        </div>
+        <!-- button -->
+        <p class="lead">
+          <a class="btn btn-outline-warning btn-lg upper " href="#" role="button">shop our product range</a>
+        </p>
+      </div>
+    </div>
 
   </main>
   <footer>
