rev sezione products

--- a/index.html
+++ b/index.html
@@ -122,35 +122,36 @@
       </div>
     </div>
     <!-- sezione Products -->
-    <div class="container-fluid products">
+    <div class="container-fluid products"
+         style="background-image: url('dist/img/avadabarbers-reviewsbackground.jpg')">
       <div class="container products">
         <div class="products-title">
           <h3 class="upper">we have you covered</h3>
           <h1>Avada Grooming Products</h1>
         </div>
         <!-- 4 colonne con 4 cards -->
-        <div class="services-cards">
+        <div class="products-cards">
           <!-- brush -->
-          <div class="card">
-            <img src="" alt="brush">
+          <div class="cards">
+            <img src="dist/img/brush_dark-400x400.png" alt="brush">
             <h4>Brush</h4>
             <p>$15.00</p>
           </div>
           <!-- scissors -->
-          <div class="card">
-            <img src="" alt="scissors">
+          <div class="cards">
+            <img src="dist/img/scissors-400x400.png" alt="scissors">
             <h4>Scissors</h4>
             <p>$85.00</p>
           </div>
           <!-- hot oil -->
-          <div class="card">
-            <img src="" alt="oil">
+          <div class="cards">
+            <img src="dist/img/hot_oil_dark-400x400.png" alt="oil">
             <h4>Hot Oil</h4>
             <p>$15.00</p>
           </div>
           <!-- razor -->
-          <div class="card">
-            <img src="" alt="razor">
+          <div class="cards">
+            <img src="dist/img/straight_razor_dark-400x400.png" alt="razor">
             <h4>Straight Razor</h4>
             <p>$30.00</p>
           </div>
