inizio sezione banner

--- a/index.html
+++ b/index.html
@@ -162,6 +162,28 @@
         </p>
       </div>
     </div>
+    <!-- sezione banner Shaving Butter -->
+    <div class="container-fluid container-banner">
+      <!-- banner centrale -->
+      <div class="container banner">
+        <!-- img butter a sx -->
+        <div class="container-img">
+          <img src="" alt="">
+        </div>
+        <!-- descrizione a dx -->
+        <div class="container-description">
+          <div class="description">
+            <h3 class="upper">this months featured product</h3>
+            <h1>Shaving Butter</h1>
+            <p></p>
+            <p class="lead">
+              <a class="btn btn-outline-warning btn-lg upper " href="#" role="button">buy now</a>
+            </p>
+          </div>
+        </div>
+      </div>
+
+    </div>
 
   </main>
   <footer>
