inizio sezione reviews

--- a/index.html
+++ b/index.html
@@ -167,22 +167,89 @@
       <!-- banner centrale -->
       <div class="container banner">
         <!-- img butter a sx -->
-        <div class="container-img">
-          <img src="" alt="">
+        <div class="container-img"
+             style="background-image: url('dist/img/avadabarbers-cta-background.jpg')">
+          <img src="dist/img/shaving_butter-400x400.png" alt="butter">
         </div>
         <!-- descrizione a dx -->
         <div class="container-description">
           <div class="description">
             <h3 class="upper">this months featured product</h3>
             <h1>Shaving Butter</h1>
-            <p></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
+              <br>
+              laoreet enim est, vel molestie dolor ultrices ut. Lorem ipsum dolor sit
+              <br>
+              amet, consectetur adipiscing elit.
+            </p>
             <p class="lead">
               <a class="btn btn-outline-warning btn-lg upper " href="#" role="button">buy now</a>
             </p>
           </div>
         </div>
       </div>
-
+    </div>
+    <!-- sezione Reviews -->
+    <div class="container-fluid container-reviews">
+      <div class="container reviews">
+        <div class="reviews-title">
+          <h3 class="upper">what people say</h3>
+          <h1>Reviews</h1>
+        </div>
+        <!-- 3 colonne con 3 cards review -->
+        <div class="reviews-cards">
+          <div class="card">
+            <p>Lorem ipsum dolor sit amet,
+              <br>
+               consectetur adipiscing elit. Morbi
+              <br>
+               mollis eleifend ante ut sagittis. Sed
+              <br>
+               sodales, urna et imperdiet placerat, ex
+              <br>
+               nisi aliquam orci, ac varius odio libero
+              <br>
+               et arcu.
+            </p>
+            <img src="dist/img/avadabarbers-trimcut-gallery6-400x402.jpg" alt="gallery6">
+            <h3>John Doe</h3>
+          </div>
+          <!-- wash & dry -->
+          <div class="card">
+            <p>Lorem ipsum dolor sit amet,
+              <br>
+               consectetur adipiscing elit. Morbi
+              <br>
+               mollis eleifend ante ut sagittis. Sed
+              <br>
+               sodales, urna et imperdiet placerat, ex
+              <br>
+               nisi aliquam orci, ac varius odio libero
+              <br>
+               et arcu.
+            </p>
+            <img src="dist/img/avadabarbers-trimcut-gallery7-400x402.jpg" alt="gallery7">
+            <h3>Pete Jones</h3>
+          </div>
+          <!-- beard Tidy -->
+          <div class="card">
+            <p>Lorem ipsum dolor sit amet,
+              <br>
+               consectetur adipiscing elit. Morbi
+              <br>
+               mollis eleifend ante ut sagittis. Sed
+              <br>
+               sodales, urna et imperdiet placerat, ex
+              <br>
+               nisi aliquam orci, ac varius odio libero
+              <br>
+               et arcu.
+            </p>
+            <img src="dist/img/avadabarbers-trimcut-gallery3-400x402.jpg" alt="gallery3">
+            <h3>Mark Wilson</h3>
+          </div>
+        </div>
+      </div>
     </div>
 
   </main>
