--- a/index.html
+++ b/index.html
@@ -211,7 +211,9 @@
               <br>
                et arcu.
             </p>
-            <img src="dist/img/avadabarbers-trimcut-gallery6-400x402.jpg" alt="gallery6">
+            <span>
+              <img src="dist/img/avadabarbers-trimcut-gallery6-400x400.jpg" alt="gallery6">
+            </span>
             <h3>John Doe</h3>
           </div>
           <!-- wash & dry -->
@@ -228,7 +230,9 @@
               <br>
                et arcu.
             </p>
-            <img src="dist/img/avadabarbers-trimcut-gallery7-400x402.jpg" alt="gallery7">
+            <span>
+              <img src="dist/img/avadabarbers-trimcut-gallery7-400x402.jpg" alt="gallery7">
+            </span>
             <h3>Pete Jones</h3>
           </div>
           <!-- beard Tidy -->
@@ -245,12 +249,70 @@
               <br>
                et arcu.
             </p>
-            <img src="dist/img/avadabarbers-trimcut-gallery3-400x402.jpg" alt="gallery3">
+            <span>
+              <img src="dist/img/avadabarbers-trimcut-gallery3-400x402.jpg" alt="gallery3">
+            </span>
             <h3>Mark Wilson</h3>
           </div>
         </div>
       </div>
     </div>
+    <!-- sezione Blog Posts -->
+    <div class="container-fluid container-blog">
+      <div class="container blog">
+        <div class="blog-title">
+          <h3 class="upper">tales from the barber shop</h3>
+          <h1>Recent Blog Posts</h1>
+        </div>
+        <!-- 3 colonne con 3 cards -->
+        <div class="blog-cards">
+          <!-- avada barbers-->
+          <div class="card">
+            <img src="dist/img/avadabarbers-second-blog-700x441.jpg" alt="blog">
+            <h4>Avada Barbers Now
+              <br>
+              Open
+            </h4>
+            <p>Lorem ipsum dolor sit amet, consectetur
+              <br>
+               adipiscing elit. Phasellus ut dapibus magna.
+              <br>
+               Praesent semper,
+            </p>
+          </div>
+          <!-- right barber -->
+          <div class="card">
+            <img src="dist/img/avadabarbers-choosing-blog-700x441.jpg" alt="blog">
+            <h4>Choosing The Right
+              <br>
+               Barber
+            </h4>
+            <p>Lorem ipsum dolor sit amet, consectetur
+              <br>
+               adipiscing elit. Phasellus ut dapibus magna.
+              <br>
+               Praesent semper,
+            </p>
+          </div>
+          <!-- service guide -->
+          <div class="card">
+            <img src="dist/img/avadabarbers-ourservice-blog-700x441.jpg" alt="blog">
+            <h4>Quick Service Guide</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur
+              <br>
+               adipiscing elit. Phasellus ut dapibus magna.
+              <br>
+               Praesent semper,
+            </p>
+          </div>
+        </div>
+        <!-- button -->
+        <p class="lead">
+          <a class="btn btn-outline-warning btn-lg upper " href="#" role="button">read more from our blog</a>
+        </p>
+      </div>
+    </div>
+
 
   </main>
   <footer>
