struttura html ok, manca scss da rev + Vue

--- a/index.html
+++ b/index.html
@@ -312,12 +312,58 @@
         </p>
       </div>
     </div>
-
-
+    <footer>
+      <!-- top footer con links -->
+      <div class="container-fluid footer-top">
+        <div class="container container-cards">
+          <!-- suddivisione in 3 cards -->
+          <!-- shop -->
+          <div class="cards">
+            <img src="dist/img/avadabarbers_footer_shop_image-800x624.png" alt="shop">
+            <p class="lead">
+              <a class="btn btn-outline-warning btn-lg upper " href="#" role="button">shop our range now</a>
+            </p>
+          </div>
+          <!-- contact info -->
+          <div class="cards">
+            <img src="" alt="">
+            <p>Avada barbers
+              <br>
+              123 New York Street
+              <br>
+              New York City
+              <br>
+              info@yourwebsite.com
+              <br>
+              +1(555)555-1212
+            </p>
+            <h3 class="upper">follow us</h3>
+            <!-- icone social networks -->
+            <div class="container-icons">
+              <div class="icons">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-youtube"></i>
+                <i class="fab fa-instagram"></i>
+              </div>
+            </div>
+          </div>
+          <!-- shop -->
+          <div class="cards">
+            <img src="dist/img/avadabarbers_footer_appointment_image.png" alt="appointment">
+            <p class="lead">
+              <a class="btn btn-outline-warning btn-lg upper " href="#" role="button">book your appointment</a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid footer-bottom">
+        <div class="copyright">
+          © Copyright 2012 - 2021 | Avada Theme by ThemeFusion | All Rights Reserved | Powered by WordPress
+        </div>
+      </div>
+    </footer>
   </main>
-  <footer>
-
-  </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js" charset="utf-8"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script> -->
