--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <!-- 3 colonne con 3 cards -->
         <div class="blog-cards">
           <!-- avada barbers-->
-          <div class="card">
+          <div class="cards">
             <img src="dist/img/avadabarbers-second-blog-700x441.jpg" alt="blog">
             <h4>Avada Barbers Now
               <br>
@@ -281,7 +281,7 @@
             </p>
           </div>
           <!-- right barber -->
-          <div class="card">
+          <div class="cards">
             <img src="dist/img/avadabarbers-choosing-blog-700x441.jpg" alt="blog">
             <h4>Choosing The Right
               <br>
@@ -295,7 +295,7 @@
             </p>
           </div>
           <!-- service guide -->
-          <div class="card">
+          <div class="cards">
             <img src="dist/img/avadabarbers-ourservice-blog-700x441.jpg" alt="blog">
             <h4>Quick Service Guide</h4>
             <p>Lorem ipsum dolor sit amet, consectetur
@@ -312,6 +312,7 @@
         </p>
       </div>
     </div>
+    <!-- FOOTER CON LINK Vue -->
     <footer>
       <!-- top footer con links -->
       <div class="container-fluid footer-top">
@@ -326,7 +327,7 @@
           </div>
           <!-- contact info -->
           <div class="cards">
-            <img src="" alt="">
+            <img src="dist/img/avadabarbers-logo-x2-200x70.png" alt="logo">
             <p>Avada barbers
               <br>
               123 New York Street
