--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@600&display=swap" rel="stylesheet">
     <title>Barber Shop</title>
 </head>
-<body style="width: 100vw;height: 100vh;">
+<body style="width: 100%;height: 100vh;">
   <!-- header -->
   <header>
     <!-- navbar fissa in alto -->
@@ -45,10 +45,10 @@
         <!-- titolo testo e button -->
         <div class="container-info">
           <h1 class="display-4">Barber Shop</h1>
-          <hr class="my-4">
+          <hr class="my-4 mr-300">
           <p>The Pinnacle of Male Grooming</p>
-          <p class="lead">
-            <a class="btn btn-outline-warning btn-lg upper " href="#" role="button">learn more</a>
+          <p class="lead pt-20">
+            <a class="btn btn-lg upper " href="#" role="button">learn more</a>
           </p>
         </div>
         <!-- img barbiere -->
@@ -63,8 +63,8 @@
       <div class="container-award">
         <h3 class="upper">award winning</h3>
         <h1>Pro Barbers</h1>
-        <p class="lead">
-          <a class="btn btn-outline-warning btn-lg upper " href="#" role="button">meet your new barber</a>
+        <p class="lead pt-20">
+          <a class="btn btn-lg upper " href="#" role="button">meet your new barber</a>
         </p>
       </div>
     </div>
@@ -79,8 +79,8 @@
         <div class="services-cards">
           <!-- trim & cut -->
           <div class="card">
-            <img src="dist/img/avadabarbers-trimcut-icon-before.png" alt="trim">
-            <h4>Trim & Cut</h4>
+            <img class="small-img" src="dist/img/avadabarbers-trimcut-icon-before.png" alt="trim">
+            <h4 class="ptb-20">Trim & Cut</h4>
             <p>Avada Barbers are experts in the
               <br>
                lickety split trim and hair cut. Quick
@@ -92,8 +92,8 @@
           </div>
           <!-- wash & dry -->
           <div class="card">
-            <img src="dist/img/avadabarbers-washndry-icon.png" alt="shampoo">
-            <h4>Wash & Dry</h4>
+            <img class="small-img" src="dist/img/avadabarbers-washndry-icon.png" alt="shampoo">
+            <h4 class="ptb-20">Wash & Dry</h4>
             <p>Take a seat in our fine leather chairs,
               <br>
               lean back and let us lather you a fresh
@@ -103,8 +103,8 @@
           </div>
           <!-- beard Tidy -->
           <div class="card">
-            <img src="dist/img/avadabarbers-beardtrim-icon.png" alt="tidy">
-            <h4>Beard Tidy</h4>
+            <img class="small-img" src="dist/img/avadabarbers-beardtrim-icon.png" alt="tidy">
+            <h4 class="ptb-20">Beard Tidy</h4>
             <p>Tame the tangles and untidy facial
               <br>
               hairs like a gentleman with our
@@ -117,7 +117,7 @@
         </div>
         <!-- button -->
         <p class="lead">
-          <a class="btn btn-outline-warning btn-lg upper " href="#" role="button">read about our services</a>
+          <a class="btn btn-lg upper " href="#" role="button">read about our services</a>
         </p>
       </div>
     </div>
@@ -158,7 +158,7 @@
         </div>
         <!-- button -->
         <p class="lead">
-          <a class="btn btn-outline-warning btn-lg upper " href="#" role="button">shop our product range</a>
+          <a class="btn btn-lg upper " href="#" role="button">shop our product range</a>
         </p>
       </div>
     </div>
@@ -183,7 +183,7 @@
               amet, consectetur adipiscing elit.
             </p>
             <p class="lead">
-              <a class="btn btn-outline-warning btn-lg upper " href="#" role="button">buy now</a>
+              <a class="btn btn-lg upper " href="#" role="button">buy now</a>
             </p>
           </div>
         </div>
@@ -197,7 +197,7 @@
           <h1>Reviews</h1>
         </div>
         <!-- 3 colonne con 3 cards review -->
-        <div class="reviews-cards">
+        <div class="reviews-cards pt-40">
           <div class="card">
             <p>Lorem ipsum dolor sit amet,
               <br>
@@ -211,10 +211,10 @@
               <br>
                et arcu.
             </p>
-            <span>
+            <span class="ptb-20">
               <img src="dist/img/avadabarbers-trimcut-gallery6-400x400.jpg" alt="gallery6">
             </span>
-            <h3>John Doe</h3>
+            <h3 class="italic">John Doe</h3>
           </div>
           <!-- wash & dry -->
           <div class="card">
@@ -230,10 +230,10 @@
               <br>
                et arcu.
             </p>
-            <span>
+            <span class="ptb-20">
               <img src="dist/img/avadabarbers-trimcut-gallery7-400x402.jpg" alt="gallery7">
             </span>
-            <h3>Pete Jones</h3>
+            <h3 class="italic">Pete Jones</h3>
           </div>
           <!-- beard Tidy -->
           <div class="card">
@@ -249,16 +249,16 @@
               <br>
                et arcu.
             </p>
-            <span>
+            <span class="ptb-20">
               <img src="dist/img/avadabarbers-trimcut-gallery3-400x402.jpg" alt="gallery3">
             </span>
-            <h3>Mark Wilson</h3>
+            <h3 class="italic">Mark Wilson</h3>
           </div>
         </div>
       </div>
     </div>
     <!-- sezione Blog Posts -->
-    <div class="container-fluid container-blog">
+    <div class="container-fluid blog">
       <div class="container blog">
         <div class="blog-title">
           <h3 class="upper">tales from the barber shop</h3>
@@ -308,7 +308,7 @@
         </div>
         <!-- button -->
         <p class="lead">
-          <a class="btn btn-outline-warning btn-lg upper " href="#" role="button">read more from our blog</a>
+          <a class="btn btn-lg upper " href="#" role="button">read more from our blog</a>
         </p>
       </div>
     </div>
@@ -322,7 +322,7 @@
           <div class="cards">
             <img src="dist/img/avadabarbers_footer_shop_image-800x624.png" alt="shop">
             <p class="lead">
-              <a class="btn btn-outline-warning btn-lg upper " href="#" role="button">shop our range now</a>
+              <a class="btn btn-lg upper " href="#" role="button">shop our range now</a>
             </p>
           </div>
           <!-- contact info -->
@@ -342,10 +342,18 @@
             <!-- icone social networks -->
             <div class="container-icons">
               <div class="icons">
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-youtube"></i>
-                <i class="fab fa-instagram"></i>
+                <a href="#">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-youtube"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-instagram"></i>
+                </a>
               </div>
             </div>
           </div>
@@ -353,14 +361,16 @@
           <div class="cards">
             <img src="dist/img/avadabarbers_footer_appointment_image.png" alt="appointment">
             <p class="lead">
-              <a class="btn btn-outline-warning btn-lg upper " href="#" role="button">book your appointment</a>
+              <a class="btn btn-lg upper " href="#" role="button">book your appointment</a>
             </p>
           </div>
         </div>
       </div>
       <div class="container-fluid footer-bottom">
         <div class="copyright">
-          © Copyright 2012 - 2021 | Avada Theme by ThemeFusion | All Rights Reserved | Powered by WordPress
+          <p>
+            © Copyright 2012 - 2021 | Avada Theme by ThemeFusion | All Rights Reserved | Powered by WordPress
+          </p>
         </div>
       </div>
     </footer>
