--- a/index.html
+++ b/index.html
@@ -268,7 +268,9 @@
         <div class="blog-cards">
           <!-- avada barbers-->
           <div class="cards">
-            <img src="dist/img/avadabarbers-second-blog-700x441.jpg" alt="blog">
+            <span class="plr-15">
+              <img src="dist/img/avadabarbers-second-blog-700x441.jpg" alt="blog">
+            </span>
             <h4>Avada Barbers Now
               <br>
               Open
@@ -282,7 +284,9 @@
           </div>
           <!-- right barber -->
           <div class="cards">
-            <img src="dist/img/avadabarbers-choosing-blog-700x441.jpg" alt="blog">
+            <span class="plr-15">
+              <img src="dist/img/avadabarbers-choosing-blog-700x441.jpg" alt="blog">
+            </span>
             <h4>Choosing The Right
               <br>
                Barber
@@ -296,7 +300,9 @@
           </div>
           <!-- service guide -->
           <div class="cards">
-            <img src="dist/img/avadabarbers-ourservice-blog-700x441.jpg" alt="blog">
+            <span class="plr-15">
+              <img src="dist/img/avadabarbers-ourservice-blog-700x441.jpg" alt="blog">
+            </span>
             <h4>Quick Service Guide</h4>
             <p>Lorem ipsum dolor sit amet, consectetur
               <br>
@@ -328,7 +334,7 @@
           <!-- contact info -->
           <div class="cards">
             <img src="dist/img/avadabarbers-logo-x2-200x70.png" alt="logo">
-            <p>Avada barbers
+            <p class="ptb-50">Avada barbers
               <br>
               123 New York Street
               <br>
@@ -338,7 +344,7 @@
               <br>
               +1(555)555-1212
             </p>
-            <h3 class="upper">follow us</h3>
+            <h3 class="upper pb-30">follow us</h3>
             <!-- icone social networks -->
             <div class="container-icons">
               <div class="icons">
